--- a/app/src/main/res/drawable/button_gradient_drawable.xml
+++ b/app/src/main/res/drawable/button_gradient_drawable.xml
@@ -7,4 +7,13 @@
         android:angle="45"/>
 
     <corners android:radius="30dp" />
+
+    <padding
+        android:bottom="16dp"
+        android:left="16dp"
+        android:right="16dp"
+        android:top="16dp" />
+
+    <size
+        android:height="52dp" />
 </shape>
