add bottom sheets

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,7 +6,6 @@
     android:id="@+id/coordinator_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
@@ -80,7 +79,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="32dp"
                 android:layout_weight="0"
-                android:background="@drawable/shape_capsule"
+                android:background="@drawable/shape_capsule_border"
                 android:clickable="true"
                 android:drawableLeft="@drawable/ic_timer_black_24dp"
                 android:drawablePadding="8dp"
@@ -105,7 +104,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:layout_weight="0"
-                android:background="@drawable/shape_capsule"
+                android:background="@drawable/shape_capsule_border"
                 android:clickable="true"
                 android:drawableLeft="@drawable/ic_incognito"
                 android:drawablePadding="8dp"
@@ -152,7 +151,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
                         android:layout_marginBottom="8dp"
-                        android:background="@drawable/shape_capsule"
+                        android:background="@drawable/shape_capsule_border"
                         android:backgroundTint="@android:color/holo_blue_light"
                         android:text="logout"
                         android:textColor="@android:color/white"
@@ -168,7 +167,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="24dp"
                         android:layout_marginBottom="24dp"
-                        android:background="@drawable/shape_capsule"
+                        android:background="@drawable/shape_capsule_border"
                         android:backgroundTint="@android:color/holo_red_light"
                         android:text="login"
                         android:textColor="@android:color/white"
@@ -186,7 +185,7 @@
                         android:layout_marginTop="24dp"
                         android:layout_marginEnd="24dp"
                         android:layout_weight="1"
-                        android:background="@drawable/shape_capsule"
+                        android:background="@drawable/shape_capsule_border"
                         android:gravity="center"
                         android:paddingLeft="16dp"
                         android:paddingTop="8dp"
