--- a/app/src/main/res/layout/fragment_sample.xml
+++ b/app/src/main/res/layout/fragment_sample.xml
@@ -235,7 +235,7 @@
                         android:layout_marginRight="16dp"
                         android:layout_marginBottom="16dp"
                         android:layout_weight="1"
-                        android:background="@drawable/shape_capsule"
+                        android:background="@drawable/shape_capsule_border"
                         android:paddingLeft="16dp"
                         android:paddingTop="8dp"
                         android:paddingRight="16dp"
@@ -251,7 +251,7 @@
                         android:layout_marginRight="16dp"
                         android:layout_marginBottom="16dp"
                         android:layout_weight="1"
-                        android:background="@drawable/shape_capsule"
+                        android:background="@drawable/shape_capsule_border"
                         android:gravity="center"
                         android:paddingLeft="16dp"
                         android:paddingTop="8dp"
@@ -310,7 +310,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:background="@drawable/shape_capsule"
+                android:background="@drawable/shape_capsule_border"
                 android:paddingStart="16dp"
                 android:paddingTop="8dp"
                 android:paddingEnd="16dp"
@@ -324,7 +324,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:background="@drawable/shape_capsule"
+                android:background="@drawable/shape_capsule_border"
                 android:paddingStart="16dp"
                 android:paddingTop="8dp"
                 android:paddingEnd="16dp"
